Fixed padding in body so it doesnt overlap the navbar

--- a/cover.css
+++ b/cover.css
@@ -26,6 +26,7 @@ a:hover {
 
 html,
 body {
+  padding-top:40px;
   height: 100%;
   background-color: #333;
 }
